[project]
name = "map-scraper-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.120.2",
    "mysql-connector-python>=9.5.0",
    "pandas>=2.3.3",
    "playwright>=1.53.0",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]
